[tool.poetry]
name = "laboutik"
version = "0.10"
description = "Cash register, cashless system with RFID / NFC chip and order-taking system."
authors = ["Cooperative Code Commun <https://codecommun.coop>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2"
django-extensions = "3.1.5"
celery = "5.2.7"
redis = "4.3.4"
django-admin-sortable2 = "1.0.2"
djangorestframework = "3.13"
requests = "^2.31.0"
django-jet = "1.0.8"
gunicorn = "^21.2.0"
django-admin-rangefilter = "^0.10.0"
python-dateutil = "^2.9.0.post0"
inotify = "^0.2.10"
admin-totals = "^1.0.1"
django-solo = "2"
Werkzeug = "2.0.3"
prettytable = "^3.10.0"
django-more-admin-filters = "^1.7"
channels = "3.0.5"
channels-redis = "3.4.1"
twisted = {extras = ["http2"], version = "^22.10.0"}
django-weasyprint = "^2.2"
sentry-sdk = "^1.44.1"
djangorestframework-api-key = "^3.0.0"
pillow = "^10.3.0"
django-stdimage = "^6.0.2"
psycopg2 = "2.8.6"
python-memcached = "^1.62"
numpy = "^1.24"
pydyf = "0.10.0"
stripe = "^11.3.0"
daphne = ">=3.0,<4"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.12"
Faker = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
